# kodekid

./: .gitignore  README.md  firebase.json  firestore.rules  pubspec.yaml  storage.rules
.cursor/: context_notes.md
backend/python_service/: Dockerfile  pyproject.toml  requirements.txt
backend/python_service/app/: main.py
lib/: firebase_options.dart  main.dart
lib/app/: app.dart
lib/features/code_editor/presentation/: editor_page.dart
lib/features/lessons/presentation/: lessons_page.dart
lib/features/profile/presentation/: profile_page.dart
